# app/Http/Controllers/Menurestaurant/MenuController.php
@@ -38,6 +38,35 @@ class MenuController extends Controller
         return response()->json($result);
     }
     /**
+     * @OA\Get(
+     *      path="/api/getMenuRestauByCategory/{id}",
+     *      operationId="getMenuRestauByCategory",
+     *      tags={"Menu"},
+     *      summary="Get",
+     *      description="Returns list",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful",
+     * *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *       ),
+     *     )
+     */
+    public function getMenuRestauByCategory($id)
+    {
+        $data = MenuRestau::join('categories', 'categories.id', '=', 'menu_restaus.category_id')
+            ->where('category_id', $id)
+            ->select('menu_restaus.*', 'categories.designation_en', 'categories.designation_fr')->get();
+        $result = [
+            'message' => 'success',
+            'success' => true,
+            'status' => 201,
+            'data' => $data
+        ];
+        return response()->json($result);
+    }
+    /**
      * @OA\Post(
      * path="/api/createMenu",
      * summary="Create",
