# app/Http/Controllers/Restaurant/RestaurantController.php
@@ -49,11 +49,12 @@ class RestaurantController extends Controller
      *    required=true,
      *    description="Enregistrer",
      *    @OA\JsonContent(
-     *       required={"title_en","title_fr","description_en","description_fr"},
+     *       required={"title_en","title_fr","description_en","description_fr","horaire"},
      *       @OA\Property(property="title_en", type="string", format="text",example="rdc"),
      *       @OA\Property(property="title_fr", type="string", format="text",example="rdc"),
      *       @OA\Property(property="description_fr", type="string", format="text",example="winner kambale"),
      *       @OA\Property(property="description_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="horaire", type="string", format="text",example="08h00-22h00"),
      *    ),
      * ),
      * @OA\Response(
@@ -72,7 +73,8 @@ class RestaurantController extends Controller
             'title_en' => 'required',
             'title_fr' => 'required',
             'description_fr' => 'required',
-            'description_en' => 'required'
+            'description_en' => 'required',
+            'horaire' => 'required'
         ]);
         if ($validator->fails()) {
             return response()->json([
@@ -86,6 +88,7 @@ class RestaurantController extends Controller
             'title_fr' => $request->title_fr,
             'description_fr' => $request->description_fr,
             'description_en' => $request->description_en,
+            'horaire' => $request->horaire
         ]);
         $result = [
             'message' => "success",
@@ -112,11 +115,12 @@ class RestaurantController extends Controller
      *    required=false,
      *    description="Modifier",
      *    @OA\JsonContent(
-     *       required={"title_en","title_fr","description_fr","description_en"},
-     *       @OA\Property(property="description_fr", type="string", format="text", example="winner services"),
-     *       @OA\Property(property="description_en", type="string", format="text", example="winner services"),
-     *       @OA\Property(property="title_en", type="string", format="text", example="winner kambale"),
-     *       @OA\Property(property="title_fr", type="string", format="text", example="rdc"),
+     *       required={"title_en","title_fr","description_en","description_fr","horaire"},
+     *       @OA\Property(property="title_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="title_fr", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="description_fr", type="string", format="text",example="winner kambale"),
+     *       @OA\Property(property="description_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="horaire", type="string", format="text",example="08h00-22h00"),
      *    ),
      * ),
      * @OA\Response(
@@ -145,7 +149,8 @@ class RestaurantController extends Controller
             'title_en' => 'required',
             'title_fr' => 'required',
             'description_fr' => 'required',
-            'description_en' => 'required'
+            'description_en' => 'required',
+            'horaire' => 'required'
         ]);
 
         if ($validator->fails()) {
@@ -158,7 +163,8 @@ class RestaurantController extends Controller
             'title_en' => $request->title_en,
             'title_fr' => $request->title_fr,
             'description_fr' => $request->description_fr,
-            'description_en' => $request->description_en
+            'description_en' => $request->description_en,
+            'horaire' => $request->horaire
         ]);
         $result = [
             'message' => "success",
